# AI-Transcriber

./: .gitignore  README.md  app.py  pyproject.toml
assets/: styles.css
tests/: _make_test_video.py  make_test_video.py  test_ai_summary.py  test_all.py  test_batch.py  test_cloud_engine.py  test_confidence_highlight.py  test_english.aiff  test_german.aiff  test_language.py  test_redact_secrets.py  test_text_processor.py  test_timestamps.py  test_url_source.py
transcriber/: __init__.py  ai_summary.py  audio_processor.py  batch.py  cloud_engine.py  exporter.py  language.py  text_processor.py  url_source.py
