[project]
name = "transcriber"
version = "0.1.0"
description = "AI-powered audio transcription with speaker diarization"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "deepgram-sdk>=5.3.2",
    "fpdf2>=2.8.5",
    "groq>=1.0.0",
    "openai>=2.21.0",
    "pydub>=0.25.1",
    "python-docx>=1.2.0",
    "streamlit>=1.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
