[project]
name = "transcriber"
version = "0.1.0"
description = "AI-powered audio transcription with speaker diarization"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "deepgram-sdk>=5.3.2",
    "fpdf2>=2.8.5",
    "groq>=1.0.0",
    "openai>=2.21.0",
    "python-docx>=1.2.0",
    "streamlit>=1.54.0",
    "tenacity>=8.0.0",
    "yt-dlp>=2026.3.17",
]
# Note: ffmpeg and ffprobe are required system binaries (not Python deps).
# Install with: `brew install ffmpeg` (macOS) or `sudo apt install ffmpeg` (Linux).

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
# Treat warnings as errors so a new deprecation can't quietly creep
# in. Listed exemptions are third-party noise we cannot fix in this
# repo:
#   * deepgram-sdk's transitive ``websockets.legacy`` import. The
#     websockets ecosystem is mid-migration; the SDK's modernised
#     replacement isn't released yet, so silencing the specific
#     message is the right call rather than swallowing all
#     DeprecationWarnings.
filterwarnings = [
    "error",
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
]
